--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "nodemon": "^3.0.1",
     "pg": "^8.11.2",
     "pg-hstore": "^2.3.4",
-    "sequelize": "^6.32.1"
+    "sequelize": "^6.32.1",
+    "winston": "^3.10.0"
   }
 }
